2006-10-10  Neil Williams <linux@codehelp.co.uk>

	* autogen.sh : Remove maintainer mode.
	* configure.in : Remove maintainer mode,
	fix gettext problem in familiar build.

2006-10-09  Neil Williams <linux@codehelp.co.uk>

	* qof/qoftime.h : Add <time.h> to solve
	problem on familiar build.
	* qof/qoftime.c : Replace g_date_set_timeval
	which is not available in glib2-0 2.6.
	* qof/deprecated.c : Regress deprecated
	qof_is_same_day back to original version to
	allow builds against glib-2.0 2.6.

2006-10-02  Neil Williams <linux@codehelp.co.uk>

	* configure.in,
	doc/Makefile.am : Ensure Doxygen build
	can be disabled correctly.
	* lib/libsql/Makefile.am : Remove useless
	INCLUDES instruction that complicates
	the embedded build.

2006-09-30  Neil Williams <linux@codehelp.co.uk>

	* configure.in : Support new Brazilian
	Portuguese and Indonesian translations.

2006-09-21  Neil Williams <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c : Check path is
	writeable before trying to create a database.
	* qof/qoferror.c,
	 qof/qofsession-p.h : Use the session error Id 
	and message strings for times that no backend
	is available.
	* qof/qofsession.c : Improve error string.

	* po/en_GB.po : New string for permission error.

2006-09-21  Neil Williams <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c : Fix input_session XML
	to export_session SQLITE failure by ensuring 
	entities are created in the backend at the same
	time as the book.

2006-09-19  Neil Williams <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c : Fix update
	mode, avoid "database is locked" from sqlite
	by separating SELECT from UPDATE/INSERT.

2006-09-17  Neil Williams <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c,
	qof/deprecated.h,
	qof/kvpframe.c,
	qof/kvpframe.h,
	qof/kvputil-p.h,
	qof/kvputil.c,
	qof/kvputil.h,
	qof/qofbackend.c,
	qof/qofsql.c : Beginning the update of KVP
	and addition of KVP_TYPE_BOOLEAN.

	* qof/qofutil.c,
	qof/qofutil.h,
	qof/deprecated.c,